--- a/public/resources/views/contactShow.njk
+++ b/public/resources/views/contactShow.njk
@@ -25,10 +25,7 @@
 	</tr>
 </table>
 
-{% if (contact.user_id == currentUser.id) %}
-<a href="/contacts/{{ contact.id }}/edit" class="btn btn-default">Szerkeszt</a>
-<a href="/contacts/{{ contact.id }}/delete" class="btn btn-danger">Töröl</a>
-{% endif %}
+<button type="submit" class="btn btn-primary"><a href="/contacts/:id/favourite">Kedvencekhez adás</a></button>
 
 <table class="table table-hover ">
 	<tr>
@@ -36,11 +33,7 @@
 			<h2>Kommentek</h2>
 	    </th>
 	</tr>
-	<tr>
-		<td>1</td>
-		<td><p>Olcsó és megbizható</p></td>
-	</tr>
-    {% for com in comments %}
+    {% for com in comment %}
         {% if com.contact_id == contact.id %}
             <p>{{ com.contact_id }} - {{contact.id }}</p>
             <tr>
@@ -55,6 +48,6 @@
 	<textarea class="form-control" rows="3" id="textArea"></textarea>
 </p>
 <button type="reset" class="btn btn-default"><a href="/">Vissza</a></button>
-<button type="submit" class="btn btn-primary">Komment küldése</button>
+<button type="submit" class="btn btn-primary"><a href="/contacts/:id">Komment küldése</a></button>
 
 {% endblock %}
