--- a/public/resources/views/contactEdit.njk
+++ b/public/resources/views/contactEdit.njk
@@ -1,14 +1,14 @@
 {% extends "layout" %} {% block content %}
 <h2>Névjegy módosítása</h2>
 
-{% if contact.errors') %}
+{% if contact.errors %}
 <div class="panel panel-danger">
     <div class="panel-heading">
         <h3 class="panel-title">Hibák</h3>
     </div>
     <div class="panel-body">
         <ul>
-            {% for error in contact.errors') %}
+            {% for error in contact.errors %}
             <li>{{ error.message }}</li>
             {% endfor %}
         </ul>
@@ -24,34 +24,34 @@
     <div class="form-group">
         <label for="name" class="col-lg-2 control-label">Név</label>
         <div class="col-lg-10">
-            <input type="text" class="form-control" id="name" name="name" placeholder="Recept neve" value="{{contact.name')}}">
+            <input type="text" class="form-control" id="name" name="name" placeholder="Recept neve" value="{{ contact.name }}">
         </div>
     </div>
     <div class="form-group">
         <label for="email" class="col-lg-2 control-label">Email</label>
         <div class="col-lg-10">
-            <textarea class="form-control" rows="3" id="email" name="email">{{contact.email}}</textarea>
+            <textarea class="form-control" rows="3" id="email" name="email">{{ contact.email }}</textarea>
             <span class="help-block">Email</span>
         </div>
     </div>
     <div class="form-group">
         <label for="phone" class="col-lg-2 control-label">Telefon</label>
         <div class="col-lg-10">
-            <textarea class="form-control" rows="3" id="phone" name="phone">{{contact.phone}}</textarea>
+            <textarea class="form-control" rows="3" id="phone" name="phone">{{ contact.phone }}</textarea>
             <span class="help-block">Telefon</span>
         </div>
     </div>
     <div class="form-group">
         <label for="area" class="col-lg-2 control-label">Szolgáltatási terület</label>
         <div class="col-lg-10">
-            <textarea class="form-control" rows="3" id="area" name="area">{{contact.area}}</textarea>
+            <textarea class="form-control" rows="3" id="area" name="area">{{ contact.area }}</textarea>
             <span class="help-block">Szolgáltatási terület</span>
         </div>
     </div>
     <div class="form-group">
         <label for="avaiable" class="col-lg-2 control-label">Elérhető</label>
         <div class="col-lg-10">
-            <textarea class="form-control" rows="3" id="avaiable" name="avaiable">{{contact.avaiable}}</textarea>
+            <textarea class="form-control" rows="3" id="avaiable" name="avaiable">{{ contact.avaiable }}</textarea>
             <span class="help-block">Elérhető</span>
         </div>
     </div>
