--- a/public/resources/views/login.njk
+++ b/public/resources/views/login.njk
@@ -38,7 +38,7 @@
   <div class="form-group">
     <div class="col-lg-10 col-lg-offset-2">
       <button type="reset" class="btn btn-default">Mégsem</button>
-      <button type="submit" class="btn btn-primary">Küldés</button>
+      <button type="submit" class="btn btn-primary">Belépés</button>
     </div>
   </div>
 </form>
