--- a/public/resources/views/contactCreate.njk
+++ b/public/resources/views/contactCreate.njk
@@ -23,7 +23,7 @@
     <div class="form-group">
         <label for="name" class="col-lg-2 control-label">Név</label>
         <div class="col-lg-10">
-            <input type="text" class="form-control" id="name" name="name" placeholder="Recept neve" value="{{old('name')}}">
+            <input type="text" class="form-control" id="name" name="name" value="{{old('name')}}">
         </div>
     </div>
     <div class="form-group">
