--- a/resources/views/contactEdit.njk
+++ b/resources/views/contactEdit.njk
@@ -1,4 +1,4 @@
-﻿{% extends "layout" %} {% block content %}
+{% extends "layout" %} {% block content %}
 <h2>Névjegy módosítása</h2>
 
 {% if contact.errors %}
