--- a/resources/views/contactShow.njk
+++ b/resources/views/contactShow.njk
@@ -1,4 +1,4 @@
-﻿{% extends "layout" %}
+{% extends "layout" %}
 
 {% block content %}
 <table class="table">
@@ -21,11 +21,11 @@
 	</tr>
     <tr>
         <td>Elérhető:</td>
-        <td><p>{{ contact.avaiable }}</p></td>
-	</tr>
+        <td><p>{{ contact.avaiable }} asdsadsa</p></td>
+	</tr>  
 </table>
 
-<button type="submit" class="btn btn-primary"><a href="/contacts/:id/favourite">Kedvencekhez adás</a></button>
+<button type="submit" class="btn btn-primary"><a href="/contacts/{{ contact.id }}/favourite">Kedvencekhez adás</a></button>
 
 <table class="table table-hover ">
 	<tr>
@@ -35,7 +35,7 @@
 	</tr>
     {% for com in comment %}
         {% if com.contact_id == contact.id %}
-            <p>{{ com.contact_id }} - {{contact.id }}</p>
+            <p>{{ com.contact_id }} - {{ contact.id }}</p>
             <tr>
                 <td>{{ com.user_id }}</td>
                 <td>{{ com.comment }}</td>
@@ -43,11 +43,11 @@
         {% endif %}
     {% endfor %}
 </table>
-
-<p>Új komment :
-	<textarea class="form-control" rows="3" id="textArea"></textarea>
-</p>
-<button type="reset" class="btn btn-default"><a href="/">Vissza</a></button>
-<button type="submit" class="btn btn-primary"><a href="/contacts/:id">Komment küldése</a></button>
-
+{% if currentUser.id != 0 %}
+    <p>Új komment :
+        <textarea name="comment" id="comment" class="form-control" rows="3" id="textArea"></textarea>
+    </p>
+    <button type="reset" class="btn btn-default"><a href="/">Vissza</a></button>
+    <button type="submit" class="btn btn-primary"><a href="/contacts/{{ contact.id }}/comment">Komment küldése</a></button>
+{% endif %}
 {% endblock %}
