--- a/resources/views/main.njk
+++ b/resources/views/main.njk
@@ -1,4 +1,8 @@
-﻿{% extends "layout" %}
+{% extends "layout" %}
+
+{% block scripts %}
+    <script src="scripts/popup_login.js"></script>
+{% endblock %}
 
 {% block content %}
 
