--- a/resources/views/contactCreate.njk
+++ b/resources/views/contactCreate.njk
@@ -1,4 +1,4 @@
-﻿{% extends "layout" %} {% block content %}
+{% extends "layout" %} {% block content %}
 <h2>Új Névjegy</h2>
 
 {% if old('errors') %}
@@ -16,45 +16,45 @@
 </div>
 {% endif %}
 
-<form class="form-horizontal" method="post">
+<form class="form-horizontal" method="post" data-toogle="validator">
 
     {{ csrfField }}
 
-    <div class="form-group">
+    <div class="form-group has-feedback">
         <label for="name" class="col-lg-2 control-label">Név</label>
         <div class="col-lg-10">
-            <input type="text" class="form-control" id="name" name="name" placeholder="Recept neve" value="{{old('name')}}">
+            <input type="text" class="form-control" id="name" name="name" value="{{old('name')}}">
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group has-feedback">
         <label for="email" class="col-lg-2 control-label">Email</label>
         <div class="col-lg-10">
             <textarea class="form-control" rows="3" id="email" name="email">{{old('email')}}</textarea>
             <span class="help-block">Email</span>
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group has-feedback">
         <label for="phone" class="col-lg-2 control-label">Telefon</label>
         <div class="col-lg-10">
             <textarea class="form-control" rows="3" id="phone" name="phone">{{old('phone')}}</textarea>
             <span class="help-block">Telefon</span>
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group has-feedback">
         <label for="area" class="col-lg-2 control-label">Szolgáltatási terület</label>
         <div class="col-lg-10">
             <textarea class="form-control" rows="3" id="area" name="area">{{old('area')}}</textarea>
             <span class="help-block">Szolgáltatási terület</span>
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group has-feedback">
         <label for="avaiable" class="col-lg-2 control-label">Elérhető</label>
         <div class="col-lg-10">
             <textarea class="form-control" rows="3" id="avaiable" name="avaiable">{{old('avaiable')}}</textarea>
             <span class="help-block">Elérhető</span>
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group has-feedback">
         <label for="category_id" class="col-lg-2 control-label">Kategória</label>
         <div class="col-lg-10">
             <select class="form-control" id="category_id" name="category_id">
