--- a/resources/views/layout.njk
+++ b/resources/views/layout.njk
@@ -1,11 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Contacts</title>
+	<title>Contacts :: Main</title>
 
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/darkly/bootstrap.min.css" rel="stylesheet">
@@ -19,6 +19,7 @@
     {% block styles %}{% endblock %}
   </head>
   <body>
+    <div id="navbar">
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
           <div class="navbar-header">
@@ -45,14 +46,14 @@
               <li><a href="/users/{{ currentUser.id }}">Saját-/Kedvencek névjegyek</a></li>
               <li><a href="/logout">Kilépés</a></li>
             {% else %}
-              <li><a href="/login">Belépés</a></li>
+              <li><a href="/login" id="btnLogin">Belépés</a></li>
               <li><a href="/register">Regisztráció</a></li>
             {% endif %}
           </ul>
           </div>
       </div>
     </nav>
-
+    </div>
     <div class="container">
         {% block content %}{% endblock %}      
     </div>
@@ -62,6 +63,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     
-    {% block scripts %}{% endblock %}
+    {% block scripts %} {% endblock %}
   </body>
 </html>
